<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".OrderingActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:alpha="0.5"
        android:src="@drawable/logo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="386dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="5"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/radio_group_flavours"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_chocolate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chocolate" />

                <RadioButton
                    android:id="@+id/radio_vanilla"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vanilla" />

                <RadioButton
                    android:id="@+id/radio_strawberry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/strawberry" />

                <RadioButton
                    android:id="@+id/radio_cookies_cream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cookies_cream" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/toppings_sprinkles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sprinkles" />

            <CheckBox
                android:id="@+id/toppings_chocolate_sprinkles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate_sprinkles" />

            <CheckBox
                android:id="@+id/toppings_gummy_bears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gummy_bears" />

            <CheckBox
                android:id="@+id/toppings_whipped_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream" />

            <CheckBox
                android:id="@+id/toppings_oreos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oreos" />

            <RadioGroup
                android:id="@+id/radio_group_scoops"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/scoop1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_scoop" />

                <RadioButton
                    android:id="@+id/scoop2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_scoops" />

                <RadioButton
                    android:id="@+id/scoop3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_scoops" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/syrup"/>

            <Switch
                android:id="@+id/syrup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/no"
                android:textOn="@string/yes"
                android:showText="false"
                android:fontFamily="sans-serif-condensed"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


                <Button
                    android:id="@+id/add_to_cart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:text="@string/add_to_cart"
                    android:onClick="onAddToCart"
                    tools:ignore="ContentDescription,UsingOnClickInXml"
                    style="?android:attr/button" />

                <Button
                    android:id="@+id/complete_order"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:onClick="onCompleteOrder"
                    android:text="@string/complete_order"
                    tools:ignore="UsingOnClickInXml"
                    style="?android:attr/button" />


        </LinearLayout>
    </ScrollView>


</FrameLayout>